Update Commit. All routes has been configured.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,9 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "app/pages/ReminderAdd.tsx",
-    "app/pages/NoteDetail.tsx",
-    "app/pages/NoteAdd.tsx",
+    "app/ReminderAdd.tsx",
+    "app/NoteDetail.tsx",
+    "app/NoteAdd.tsx",
     "app/Boot.tsx",
     "app/Main.tsx",
     "app/Splash.tsx"
